--- a/jHove_batch_validate_jp2.ipynb
+++ b/jHove_batch_validate_jp2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -126,18 +126,18 @@
       "jHove validating JP2s in /Users/dlisla/Pictures/athletics_programs/Output/0.jp2_toValidate\n",
       "Number of dot files before delete: 0\n",
       "After delete: 0\n",
-      "Processing ---> 710 *.jp2 <--- in /Users/dlisla/Pictures/athletics_programs/Output/0.jp2_toValidate\n"
+      "Processing ---> 0 *.jp2 <--- in /Users/dlisla/Pictures/athletics_programs/Output/0.jp2_toValidate\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "918835f8d00842e1a192c3d7bd5648fa",
+       "model_id": "d5e500221e8b48559cb9981ec7c3e4ef",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "VBox(children=(Label(value='jHove verify images'), IntProgress(value=0, max=710)))"
+       "VBox(children=(Label(value='jHove verify images'), IntProgress(value=0, max=0)))"
       ]
      },
      "metadata": {},
@@ -155,6 +155,101 @@
    "outputs": [],
    "source": [
     "!open {str(root_path)}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# imports\n",
+    "from pathlib import Path\n",
+    "\n",
+    "# variables\n",
+    "vols_path = Path('/Users/dlisla/Pictures/athletics_programs/Output/1.jp2_toQC')\n",
+    "\n",
+    "# functions\n",
+    "def get_identifier(file_path):\n",
+    "    image_stem = file_path.stem\n",
+    "    identifier = image_stem[:-4]\n",
+    "    return identifier\n",
+    "\n",
+    "def sanitize_extension(extension):\n",
+    "    if extension.startswith('.'):\n",
+    "        return extension\n",
+    "    else:\n",
+    "        return f'.{extension}'\n",
+    "\n",
+    "def delete_dot_files(directory):\n",
+    "    dir_path = Path(directory)\n",
+    "    dot_file_path_list = list(dir_path.glob('**/.*'))\n",
+    "    print(f'Number of dot files before delete: {len(dot_file_path_list)}')\n",
+    "    for dot_file_path in dot_file_path_list:\n",
+    "        dot_file_path.unlink()\n",
+    "    dot_file_path_list = list(dir_path.glob('**/.*'))\n",
+    "    print(f'After delete: {len(dot_file_path_list)}')\n",
+    "\n",
+    "def move_into_directory(root_dir, extension, output_dir=None):\n",
+    "    \n",
+    "    extension_with_period = sanitize_extension(extension)\n",
+    "    \n",
+    "    if output_dir is None:\n",
+    "        output_dir = root_dir\n",
+    "        \n",
+    "    root_dir_path = Path(root_dir)\n",
+    "    output_dir_path = Path(output_dir)\n",
+    "    \n",
+    "    delete_dot_files(root_dir_path)\n",
+    "    \n",
+    "    file_list = sorted(root_dir_path.glob(f'*{extension_with_period}'))\n",
+    "    \n",
+    "    for path in file_list:\n",
+    "        identifier = get_identifier(path)\n",
+    "        new_dir_path = output_dir_path.joinpath(identifier)\n",
+    "        new_dir_path.mkdir(exist_ok=True)\n",
+    "        final_path = new_dir_path.joinpath(path.name)\n",
+    "        path.rename(final_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of dot files before delete: 0\n",
+      "After delete: 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "jpg_root_dir = '/Users/dlisla/Pictures/athletics_programs/Output/1.jp2_toQC'\n",
+    "jpg_output_dir = '/Users/dlisla/Pictures/athletics_programs/Output/2.jpg_toCopy'\n",
+    "move_into_directory(jpg_root_dir, 'jpg', jpg_output_dir)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of dot files before delete: 0\n",
+      "After delete: 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "jp2_root_dir = '/Users/dlisla/Pictures/athletics_programs/Output/1.jp2_toQC'\n",
+    "jp2_output_dir = '/Users/dlisla/Pictures/athletics_programs/Output/2.jp2_toCopy'\n",
+    "move_into_directory(jp2_root_dir, 'jp2', jp2_output_dir)"
    ]
   },
   {
