--- a/jHove_batch_validate_jp2.ipynb
+++ b/jHove_batch_validate_jp2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -126,18 +126,18 @@
       "jHove validating JP2s in /Users/dlisla/Pictures/athletics_programs/Output/0.jp2_toValidate\n",
       "Number of dot files before delete: 0\n",
       "After delete: 0\n",
-      "Processing ---> 105 *.jp2 <--- in /Users/dlisla/Pictures/athletics_programs/Output/0.jp2_toValidate\n"
+      "Processing ---> 3 *.jp2 <--- in /Users/dlisla/Pictures/athletics_programs/Output/0.jp2_toValidate\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bb9f1cd1fedb420b84e6239a4e6ce728",
+       "model_id": "918a9efcfb6e4cd99abbfa3bf176376c",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "VBox(children=(Label(value='jHove verify images'), IntProgress(value=0, max=105)))"
+       "VBox(children=(Label(value='jHove verify images'), IntProgress(value=0, max=3)))"
       ]
      },
      "metadata": {},
@@ -150,16 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!open {str(root_path)}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,27 +205,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of dot files before delete: 0\n",
+      "Number of dot files before delete: 1\n",
       "After delete: 0\n"
      ]
     }
    ],
    "source": [
-    "jpg_root_dir = '/Users/dlisla/Pictures/athletics_programs/Output/1.jp2_toQC'\n",
-    "jpg_output_dir = '/Users/dlisla/Pictures/athletics_programs/Output/2.jpg_toCopy'\n",
-    "move_into_directory(jpg_root_dir, 'jpg', jpg_output_dir)"
+    "jpg_input_dir = root_path.joinpath('1.jpg_toQC')\n",
+    "jpg_output_dir = root_path.joinpath('2.jpg_toCopy')\n",
+    "move_into_directory(jpg_input_dir, 'jpg', jpg_output_dir)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -247,9 +238,18 @@
     }
    ],
    "source": [
-    "jp2_root_dir = '/Users/dlisla/Pictures/athletics_programs/Output/1.jp2_toQC'\n",
+    "jp2_input_dir = '/Users/dlisla/Pictures/athletics_programs/Output/1.jp2_toQC'\n",
     "jp2_output_dir = '/Users/dlisla/Pictures/athletics_programs/Output/2.jp2_toCopy'\n",
-    "move_into_directory(jp2_root_dir, 'jp2', jp2_output_dir)"
+    "move_into_directory(jp2_input_dir, 'jp2', jp2_output_dir)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!open {str(valid_dir_path)}"
    ]
   },
   {
